# lmrs

./: .gitignore  README.md  build-lmrs-aci.sh  build.nix  default.nix  lmrs.cabal
aci-build/: lmrs.cabal
app/: Main.hs
src/Web/Mastodon/Lib/: Registration.hs
src/Web/Mastodon/Lib/Registration/: Client.hs
