name:                lmrs
version:             0.1.0.0
-- synopsis:
description: The libmastodon registration server
homepage:            https://github.com/dgonyeo/lmrs#readme
license:             BSD3
license-file:        LICENSE
author:              Derek Gonyeo
maintainer:          derek@gonyeo.com
copyright:           Apache 2.0
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Web.Mastodon.Lib.Registration
                     , Web.Mastodon.Lib.Registration.Client
  build-depends:       base               >= 4.7  && < 5
                     , servant-server >= 0.9  && < 0.10
                     , servant-client >= 0.9  && < 0.10
                     , servant-lucid  >= 0.7  && < 0.8
                     , text           >= 1.2  && < 2.0
                     , lucid          >= 2.9  && < 2.10
                     , aeson          >= 1.0  && < 1.1
  default-language:    Haskell2010

executable lmrs-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  build-depends:       base
                     , lmrs           -any
                     , hashmap        >= 1.3  && < 1.4
                     , random         >= 1.1  && < 1.2
                     , uri-encode     >= 1.5  && < 1.6
                     , servant        >= 0.9  && < 0.10
                     , servant-server >= 0.9  && < 0.10
                     , bytestring     >= 0.10 && < 0.11
                     , text           >= 1.2  && < 2.0
                     , warp           >= 3.2  && < 3.3
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/dgonyeo/lmrs
